Increased navbar text size & tweaked general style

--- a/Portal.html
+++ b/Portal.html
@@ -168,8 +168,7 @@
                                         </a>
                                 </li>
                                 <li class="nav-item">
-                                        <a class="nav-link disabled" href="Portfolio.html"> <span
-                                                        class="glyphicon glyphicon-film"></span> Portfolio (coming
+                                        <a class="nav-link disabled" href="Portfolio.html"> Portfolio (coming
                                                 soon..) </a>
                                 </li>
 
@@ -200,13 +199,13 @@
                                         <li class="nav-item">
                                                 <a class="nav-link" target="_blank"
                                                         href="https://www.linkedin.com/in/saeed-badghaish-0045a7190/">
-                                                        <span class="glyphicon glyphicon-film"></span> LinkedIn </a>
+                                                         LinkedIn </a>
 
                                         </li>
                                         <li class="nav-item">
                                                 <a class="nav-link" target="_blank"
                                                         href="https://github.com/Saeedo1998">
-                                                        <span class="glyphicon glyphicon-film"></span> GitHub </a>
+                                                         GitHub </a>
 
                                         </li>
                                 </ul>
