--- a/Portfolio.html
+++ b/Portfolio.html
@@ -37,7 +37,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="Portfolio.html"> <span class="glyphicon glyphicon-film"></span>
+                    <a class="nav-link active" href="Portfolio.html">
                         Portfolio </a>
                 </li>
                 <li class="nav-item">
@@ -72,12 +72,12 @@
                     <li class="nav-item">
                         <a class="nav-link" target="_blank"
                             href="https://www.linkedin.com/in/saeed-badghaish-0045a7190/">
-                            <span class="glyphicon glyphicon-film"></span> LinkedIn </a>
+                            LinkedIn </a>
 
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" target="_blank" href="https://github.com/Saeedo1998">
-                            <span class="glyphicon glyphicon-film"></span> GitHub </a>
+                            GitHub </a>
 
                     </li>
                 </ul>
