Commented old link

--- a/Index.html
+++ b/Index.html
@@ -247,10 +247,10 @@
                                                 href="Files/Saeed Badghaish CV - Full Stack Web Developer.pdf">View
                                         </a> -->
 
-                                        <a target="_blank"
+                                        <!-- <a target="_blank"
                                                 href="https://media-exp1.licdn.com/dms/document/C4D2DAQEyV-cpH97qcg/profile-treasury-document-pdf-analyzed/0/1635963106768?e=1637870400&v=beta&t=FdSl6Sz2zvZdP9bxhBj6uQFgi8j0wwHvlGvBAiCrNpQ">
                                                 LinkedIn
-                                        </a>
+                                        </a> -->
                                         <br>
                                         <a target="_blank"
                                                 href="Files/Saeed Badghaish CV - Full Stack Web Developer.docx">
