--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,8 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="icon" href="Images\pngwing.com.png">
+        <!-- <link rel="icon" href="Images\pngwing.com.png"> -->
+        <link rel="icon" href="Images/S-logo-inverted-round.png">
         <!-- <link rel="icon" href="https://cdn.worldvectorlogo.com/logos/aperture-science.svg"> -->
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
