Aded logo image

--- a/Index.html
+++ b/Index.html
@@ -130,7 +130,10 @@
                                 <i>Welcome</i>
                         </div>
                         <br />
-                        
+                        <div class="text-center">
+                                <img id="logo" class="logo" 
+                                src="Images/S-logo-inverted-circle-blue-1024x1024.png" onclick="playAnimRotate('logo')">
+                        </div>
                         <br />
                         <div class="text-center">
 
