Added unique color to Welcome text

--- a/Index.html
+++ b/Index.html
@@ -126,7 +126,7 @@
                                 </div>
                         </div>
                         <br>
-                        <div class="header text-center">
+                        <div class="header welcome text-center">
                                 <i>Welcome</i>
                         </div>
                         <br />
