Changed page title to Italic

--- a/css-playground.html
+++ b/css-playground.html
@@ -122,8 +122,8 @@
                                 </div>
                         </div>
                         <br>
-                        <div class="header text-center">
-                                CSS Playground
+                        <div class="header cssPlayground text-center">
+                                <i>CSS Playground</i>
                         </div>
 
 
