--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,15 @@
                 integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
                 crossorigin="anonymous">
 
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+                integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+                crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+                integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+                crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+                integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+                crossorigin="anonymous"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- <link rel="icon" href="Images\pngwing.com.png"> -->
@@ -26,10 +35,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
         <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
         <script src="Script.js"></script>
-
+        <script src="Footer.js"></script>
         <link rel="stylesheet" href="Style.css">
-
-        </style>
 
         <!-- old scrapped code, moved to Script.js -->
         <!-- <script src="Script.js" type="text/JavaScript">
@@ -40,9 +47,12 @@
              // document.getElementById('Show').style.display='none';
              };
              </script> -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 </head>
 
 <body>
+        <div class="navbarOutline"> </div>
         <nav class="navbar navbar-expand-lg navbar-custom">
                 <a class="navbar-brand" href="#">Saeed Badghaish</a>
                 <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
@@ -131,8 +141,8 @@
                         </div>
                         <br />
                         <div class="text-center">
-                                <img id="logo" class="logo" 
-                                src="Images/S-logo-inverted-circle-blue-1024x1024.png" onclick="playAnimRotate('logo')">
+                                <img id="logo" class="logo" src="Images/S-logo-inverted-circle-blue-1024x1024.png"
+                                        onclick="playAnimRotate('logo')">
                         </div>
                         <br />
                         <div class="text-center">
@@ -271,24 +281,14 @@
                         <br>
                         <br>
                         <br>
-
-                        <div class="footer text-center">
-                                Saeed Badghaish © 2021
-                        </div>
+                        
+                        <footer-saeed></footer-saeed>
+                        
                         <br>
 
                 </div>
         </div>
 
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-                integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-                crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-                integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-                crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-                integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-                crossorigin="anonymous"></script>
 </body>
 
 </html>
