--- a/Index.html
+++ b/Index.html
@@ -136,7 +136,7 @@
                                 </div>
                         </div>
                         <br>
-                        <div class="header welcome text-center">
+                        <div class="header pageTitle text-center">
                                 <i>Welcome</i>
                         </div>
                         <br />
