--- a/css-playground.html
+++ b/css-playground.html
@@ -133,7 +133,7 @@
                                 </div>
                         </div>
                         <br>
-                        <div class="header cssPlayground text-center">
+                        <div class="header pageTitle text-center">
                                 <i>CSS Playground</i>
                         </div>
 
