Updated icon Enabled page Added project overview and details

--- a/Portfolio/online-game-store.html
+++ b/Portfolio/online-game-store.html
@@ -5,9 +5,8 @@
 
     </title>
 
-    <!-- <link rel="stylesheet" type="text/css" href="../Fonts/stylesheet.css" /> -->
+    <link rel="icon" href="Images/S-logo-inverted-circle-blue-1024x1024.png">
 
-    <link rel="icon" href="Images/S-logo-inverted-round-blue.png">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -21,7 +20,8 @@
 
 </head>
 
-<body onload="redirectToHome()">
+<body>
+    <!-- <body onload="redirectToHome()"> -->
 
     <nav class="navbar navbar-expand-lg navbar-custom">
         <a class="navbar-brand" href="../Index.html">Saeed Badghaish</a>
@@ -104,16 +104,48 @@
 
                 </div>
             </div>
-
             <br>
 
-            <div class="header text-center">
+            <a href="../Portfolio.html" class="previous">&laquo; Back</a>
+
+            <div class="header pageTitle text-center">
                 Online Game Store
             </div>
+
             <br>
             <br>
             <div class="text-left">
                 Project Overview:
+                <div class="content">
+                    The purpose of the project is to build an online game store which allows customers to buy and
+                    download games on any computer they want, it also allows game developers to publish their games and
+                    earn money from customers (the store takes a %20 cut of each sale). <br>
+                    The intended user group is PC players. <br>
+                    The system stakeholders are:
+                    <ol>
+                        <li>
+                            Admins
+                        </li>
+                        <li>
+                            Customers
+
+                        </li>
+                        <li>
+                            Developers
+
+                        </li>
+
+                    </ol>
+
+                </div>
+                <br>
+                More details:
+                <br>
+                <br>
+                <div class="text-center">
+                    <embed src="../Files/Final Report-converted.pdf" width="100%" height="2100px" />
+                </div>
+
             </div>
 
             <br>
