Enabled portfolio page button

--- a/Index.html
+++ b/Index.html
@@ -69,8 +69,7 @@
                                         </a>
                                 </li>
                                 <li class="nav-item">
-                                        <a class="nav-link disabled" href="Portfolio.html">Portfolio (coming
-                                                soon..) </a>
+                                        <a class="nav-link" href="Portfolio.html">Portfolio </a>
                                 </li>
                                 <li class="nav-item">
                                         <a class="nav-link" href="css-playground.html">
