--- a/css-playground.html
+++ b/css-playground.html
@@ -66,8 +66,7 @@
                                         </a>
                                 </li>
                                 <li class="nav-item">
-                                        <a class="nav-link disabled" href="Portfolio.html"> Portfolio (coming
-                                                soon..) </a>
+                                        <a class="nav-link" href="Portfolio.html"> Portfolio </a>
                                 </li>
                                 <li class="nav-item">
                                         <a class="nav-link active" href="css-playground.html">
