Enabled page Refactored code Added projects

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -21,8 +21,9 @@
 
 </head>
 
-<body onload="redirectToHome()">
+<!-- <body onload="redirectToHome()"> -->
 
+<body>
     <nav class="navbar navbar-expand-lg navbar-custom">
         <a class="navbar-brand" href="Index.html">Saeed Badghaish</a>
         <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
@@ -105,19 +106,73 @@
                 </div>
             </div>
             <br>
-            <div class="header text-center">
-                Projects
+            <div class="header pageTitle text-center">
+                <i>Portfolio</i>
             </div>
             <br>
             <br>
+
             <div class="">
                 <div class="text-left">
-                    <a href="Portfolio/online-game-store.html">
-                        Online Game Store
-                    </a>
+
+                    University of Jeddah
+                    <br>
+
+                    <div class="content">Participated in a total of 12 projects, of which most was focused on process automation and
+                        digital transformation.
+                        <br>
+                    Details regarding these projects are confidential.
+
+                    </div>
+
                 </div>
             </div>
 
+            <br>
+
+            <div class="">
+                <div class="text-left">
+                    Online Game Store
+                    <br>
+                    <div class="content">
+                        Graduation project done as part of my study at the 
+                        <a href="https://ipa.edu.sa/en-us/Pages/default.aspx" target="_blank">Institute of Public Administration.</a>
+                        Developed using .NET C# & SQL Database using the Master Page layout and functionality with an
+                        emphasis on responsive design.
+                        <a href="Portfolio/online-game-store.html">Project details</a>
+                    </div>
+
+                </div>
+            </div>
+
+            <br>
+
+            <div class="">
+                <div id="Saeedo98" class="text-left">
+                    Personal Website
+                    <br>
+                    <div class="content">
+                        <a href="#">Saeedo98.com</a>
+
+                    </div>
+                </div>
+            </div>
+
+            <br>
+
+            <div class="">
+                <div class="text-left">
+                    Beep Generator
+                    <br>
+                    <div class="content">
+                        A simple C# console app that generates beeps based on a predefined set of programs.
+                        <a href="https://github.com/Saeedo1998/Beep-Generator" target="_blank">Project details</a>
+
+                    </div>
+                </div>
+            </div>
+
+            <br>
             <br>
             <br>
             <br>
