Fixed icon path Fixed pdf file now visible on mobile

--- a/Portfolio/online-game-store.html
+++ b/Portfolio/online-game-store.html
@@ -5,8 +5,7 @@
 
     </title>
 
-    <link rel="icon" href="Images/S-logo-inverted-circle-blue-1024x1024.png">
-
+    <link rel="icon" href="../Images/S-logo-inverted-circle-blue-1024x1024.png">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -143,7 +142,12 @@
                 <br>
                 <br>
                 <div class="text-center">
-                    <embed src="../Files/Final Report-converted.pdf" width="100%" height="2100px" />
+                    <!-- <embed src="../Files/Final Report-converted.pdf" width="100%" height="2100px" /> -->
+                    <object data="../Files/Final Report-converted.pdf" type="application/pdf" width="100%" height="100%">
+                        <p>Your web browser doesn't have a PDF plugin.
+                        Instead you can <a href="../Files/Final Report-converted.pdf">click here to
+                        download the PDF file.</a></p>
+                      </object>
                 </div>
 
             </div>
