--- a/Portfolio.html
+++ b/Portfolio.html
@@ -127,9 +127,9 @@
 
                 </div>
             </div>
-
             <br>
-
+            <hr>
+            <br>
             <div class="">
                 <div class="text-left">
                     Online Game Store
@@ -144,30 +144,30 @@
 
                 </div>
             </div>
-
             <br>
-
+            <hr>
+            <br>
             <div class="">
                 <div id="Saeedo98" class="text-left">
                     Personal Website
                     <br>
                     <div class="content">
                         <a href="#">Saeedo98.com</a>
-                         <a href="https://github.com/Saeedo1998/Personal-Website" target="_blank">View source code</a>
+                         <a href="https://github.com/Saeedo1998/Personal-Website" target="_blank">View on GitHub</a>
 
                     </div>
                 </div>
-            </div>
-
+            </div>            
             <br>
-
+            <hr>
+            <br>
             <div class="">
                 <div class="text-left">
                     Beep Generator
                     <br>
                     <div class="content">
                         A simple C# console app that generates beeps based on a predefined set of programs.
-                        <a href="https://github.com/Saeedo1998/Beep-Generator" target="_blank">Project details</a>
+                        <a href="https://github.com/Saeedo1998/Beep-Generator" target="_blank">View on GitHub</a>
 
                     </div>
                 </div>
