Added details. To complete later

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -118,10 +118,34 @@
                     University of Jeddah
                     <br>
 
-                    <div class="content">Participated in a total of 12 projects, of which most was focused on process automation and
+                    <div class="content">Participated in a total of 12 projects, of which most was focused on process
+                        automation and
                         digital transformation.
+                        <!-- <br>
+                        1- Procedure Automation System for Planning Department
                         <br>
-                    Details regarding these projects are confidential.
+                        <div class="projectInfo">
+                            A- Request for assignment from outside the university
+                            <br>
+                            The system aims to automate assignment requests submitted by government
+                            employees from outside the university, through the related HR & Development
+                            departments and authorities,
+                            thus achieving ease and accuracy in submitting applications
+                            <br>
+
+                            B- Request to transfer services from outside the university
+
+                            <br>
+                            The system aims to automate the requests for transferring
+                            services to the university submitted by the applicant,
+                            whether he is an employee inside the university or affiliated with any government agency,
+                            through the related HR & Development departments and deanships,
+                            thus achieving ease and accuracy in submitting requests.
+
+                        </div>
+
+                        <br> -->
+                        <!-- Details regarding these projects are confidential. -->
 
                     </div>
 
@@ -135,8 +159,9 @@
                     Online Game Store
                     <br>
                     <div class="content">
-                        Graduation project done as part of my study at the 
-                        <a href="https://ipa.edu.sa/en-us/Pages/default.aspx" target="_blank">Institute of Public Administration.</a>
+                        Graduation project done as part of my study at the
+                        <a href="https://ipa.edu.sa/en-us/Pages/default.aspx" target="_blank">Institute of Public
+                            Administration.</a>
                         Developed using .NET C# & SQL Database using the Master Page layout and functionality with an
                         emphasis on responsive design.
                         <a href="Portfolio/online-game-store.html">Project details</a>
@@ -153,11 +178,11 @@
                     <br>
                     <div class="content">
                         <a href="#">Saeedo98.com</a>
-                         <a href="https://github.com/Saeedo1998/Personal-Website" target="_blank">View on GitHub</a>
+                        <a href="https://github.com/Saeedo1998/Personal-Website" target="_blank">View on GitHub</a>
 
                     </div>
                 </div>
-            </div>            
+            </div>
             <br>
             <hr>
             <br>
