Removed Welcome text Reformatted text in about section

--- a/Index.html
+++ b/Index.html
@@ -119,8 +119,6 @@
         <div class="parentContainer">
                 <br>
                 <div class="container">
-
-
                         <div class="row">
                                 <div class="col-md-4">
 
@@ -135,9 +133,9 @@
                                 </div>
                         </div>
                         <br>
-                        <div class="header pageTitle text-center">
+                        <!-- <div class="header pageTitle text-center">
                                 <i>Welcome</i>
-                        </div>
+                        </div> -->
                         <br />
                         <div class="text-center">
                                 <img id="logo" class="logo" src="Images/S-logo-inverted-circle-blue-1024x1024.png"
@@ -146,7 +144,7 @@
                         <br />
                         <div class="text-center">
 
-                                My name is Saeed Badghaish
+                                Saeed Badghaish
                                 <br />
                                 <span class="subTitle">
                                         Full Stack Web Developer @ University of Jeddah
@@ -164,11 +162,14 @@
                         </div>
                         <br>
                         <br>
+                </div>
+                <br>
+                <div class="container">
                         <br>
                         <div class="section about-section">
                                 <div class="header">About</div>
                                 <div class=content>
-                                        I am a Web Developer / Programmer based in Jeddah, Saudi Arabia working on Full
+                                        Web Developer / Programmer based in Jeddah, Saudi Arabia working on Full
                                         Stack Web Development
                                         specialized in .NET C# Web App Development. <br>
                                         <span class="hidden">I'm working on MVC & .NET Core projects and learning Unity
@@ -280,9 +281,9 @@
                         <br>
                         <br>
                         <br>
-                        
+
                         <footer-saeed></footer-saeed>
-                        
+
                         <br>
 
                 </div>
