Added fallback link for project report

--- a/Portfolio/online-game-store.html
+++ b/Portfolio/online-game-store.html
@@ -143,12 +143,17 @@
                 <br>
                 <div class="text-center">
                     <!-- <embed src="../Files/Final Report-converted.pdf" width="100%" height="2100px" /> -->
-                    <object data="../Files/Final Report-converted.pdf" type="application/pdf" width="100%" height="100%">
+                    <object data="../Files/Final Report-converted.pdf" type="application/pdf" width="100%"
+                        height="100%">
                         <p>Your web browser doesn't have a PDF plugin.
-                        Instead you can <a href="../Files/Final Report-converted.pdf">click here to
-                        download the PDF file.</a></p>
-                      </object>
+                            Instead you can <a href="../Files/Final Report-converted.pdf">click here to
+                                download the PDF file.</a></p>
+                    </object>
                 </div>
+                <br>
+                <span class="content">
+                    <a href="../Files/Final Report-converted.pdf">Link to project report in case it didn't load</a>
+                </span>
 
             </div>
 
