Reduced clutter in skills section

--- a/Index.html
+++ b/Index.html
@@ -212,12 +212,12 @@
                                                 <div class="oval">
                                                         MVC
                                                 </div>
-                                                <div class="oval">
+                                                <!-- <div class="oval">
                                                         Razor
                                                 </div>
                                                 <div class="oval">
                                                         Blazor
-                                                </div>
+                                                </div> -->
 
                                         </div>
 
