Added id tag for each section to use with navigation

--- a/css-playground.html
+++ b/css-playground.html
@@ -150,7 +150,7 @@
 
                                 </div>
                                 <br>
-                                <div class="header">Static Gradients</div>
+                                <div id="Static_Gradients" class="header">Static Gradients</div>
                                 <br>
                                 <div class="row">
                                         <div class="col-6">
@@ -265,7 +265,7 @@
                                 <hr>
                                 <br>
                                 <br>
-                                <div class="header">Dynamic Gradients</div>
+                                <div id="Dynamic_Gradients" class="header">Dynamic Gradients</div>
                                 <br>
                                 
                                 <div class="row">
@@ -297,7 +297,7 @@
                                 <br>
                                 <hr>
                                 <br>
-                                <div class="header">Animations</div>
+                                <div id="Animations" class="header">Animations</div>
                                 <br>
                                 <div class="row">
                                         <div class="col-6">
