Turned navbar into web component

--- a/css-playground.html
+++ b/css-playground.html
@@ -32,6 +32,7 @@
                 crossorigin="anonymous"></script>
 
         <script src="Script.js"></script>
+        <script src="Navbar.js"></script>
         <script src="Footer.js"></script>
 
         <link rel="stylesheet" href="Style.css">
@@ -50,69 +51,7 @@
 </head>
 
 <body>
-        <nav class="navbar navbar-expand-lg navbar-custom">
-                <a class="navbar-brand" href="Index.html">Saeed Badghaish</a>
-                <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
-                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav mr-auto">
-                                <li class="nav-item">
-                                        <a class="nav-link" href="Index.html">Home
-                                                <!--<span class="sr-only">(current)</span>-->
-                                        </a>
-                                </li>
-                                <li class="nav-item">
-                                        <a class="nav-link" href="Portfolio.html"> Portfolio </a>
-                                </li>
-                                <li class="nav-item">
-                                        <a class="nav-link active" href="css-playground.html">
-                                                CSS Playground </a>
-                                </li>
-
-
-                        </ul>
-                        <form class="form-inline my-2 my-lg-0">
-                                <!--search-->
-                                <!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
-                                <!-- Social media dropdown -->
-                                <ul class="navbar-nav mr-auto">
-                                        <!-- <li class="nav-item dropdown">
-                                                <a class="nav-link dropdown-toggle" href="#"
-                                                        id="navbarDropdownSocialMedia" role="button"
-                                                        data-toggle="dropdown" aria-haspopup="true"
-                                                        aria-expanded="false">
-                                                        My social media
-                                                </a>
-                                                <div class="dropdown-menu" aria-labelledby="navbarDropdownSocialMedia">
-                                                        <a class="dropdown-item"
-                                                                href="https://www.linkedin.com/in/saeed-badghaish-0045a7190/"
-                                                                target="_blank">LinkedIn</a>
-                                                        <a class="dropdown-item" href="https://github.com/Saeedo1998"
-                                                                target="_blank">GitHub</a> -->
-                                        <!-- <div class="dropdown-divider"></div> -->
-                                        <!-- </div>
-                                        </li> -->
-                                        <li class="nav-item">
-                                                <a class="nav-link" target="_blank"
-                                                        href="https://www.linkedin.com/in/saeed-badghaish-0045a7190/">
-                                                        LinkedIn </a>
-
-                                        </li>
-                                        <li class="nav-item">
-                                                <a class="nav-link" target="_blank"
-                                                        href="https://github.com/Saeedo1998">
-                                                        GitHub </a>
-
-                                        </li>
-                                </ul>
-                        </form>
-                </div>
-        </nav>
+        <navbar-saeed></navbar-saeed>
         <div class="parentContainer">
                 <br>
                 <div class="container">
