--- a/navbar.html
+++ b/navbar.html
@@ -9,15 +9,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto navbarLinks">
                     <li class="nav-item">
-                            <a class="nav-link" href="Index.html">Home
+                            <a id="a_Index" class="nav-link" href="Index.html">Home
                                     <!--<span class="sr-only">(current)</span>-->
                             </a>
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link" href="Portfolio.html"> Portfolio </a>
+                            <a id="a_Portfolio" class="nav-link" href="Portfolio.html"> Portfolio </a>
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link" href="css-playground.html">
+                            <a id="a_CSS-Playground" class="nav-link" href="css-playground.html">
                                     CSS Playground </a>
                     </li>
 
