Added semantic section tag.

--- a/Index.html
+++ b/Index.html
@@ -107,17 +107,16 @@
                 <br>
                 <div class="container">
                         <br>
-                        <div class="section about-section">
+                        <section class="about-section">
                                 <div class="header">About</div>
-                                <div class=content>
+                                <div class="content">
                                         Web Developer / Programmer based in Jeddah, Saudi Arabia working on Full
                                         Stack Web Development
                                         specialized in .NET C# Web App Development. <br>
-                                        <span class="hidden">I'm working on MVC & .NET Core projects and learning Unity
-                                                C# Game Development on my free time.
-                                        </span>
+                                        Currently learning Unity C# Game Development on my free time.
+                                        
                                 </div>
-                        </div>
+                        </section>
                         <br>
                         <hr>
                         <br>
@@ -136,7 +135,7 @@
 
                         </div>
 
-                        <div class="section">
+                        <section>
                                 <div class="text-left">
                                         <span class="header">Skills</span>
                                         <br />
@@ -191,11 +190,11 @@
                                         </div>
 
                                 </div>
-                        </div>
+                        </section>
                         <br>
                         <hr>
                         <br>
-                        <div class="section">
+                        <section>
                                 <div class="header">Resume</div>
                                 <div class="content">
                                         <!-- <a target="_blank"
@@ -218,7 +217,7 @@
                                         </a>
 
                                 </div>
-                        </div>
+                        </section>
                         <br>
                         <br>
                         <br>
