Added navigation buttons for each section

--- a/css-playground.html
+++ b/css-playground.html
@@ -83,6 +83,13 @@
                                 Just a place where I mess around with random CSS stuff
                                 <br>
                                 <br>
+                                <div class="flexContainer">
+                                        <a class="button" href="#Static_Gradients">Static Gradients</a>
+                                        <a class="button" href="#Dynamic_Gradients">Dynamic Gradients</a>
+                                        <a class="button" href="#Animations">Animations</a>
+                                        <!-- rotatingColors -->
+                                </div>
+                                <br>
                                 <hr>
                                 <br />
                                 <div class=content>
