Hidden navbar temporarily to fix broken url issue

--- a/Portfolio/online-game-store.html
+++ b/Portfolio/online-game-store.html
@@ -23,7 +23,7 @@
 <body>
     <!-- <body onload="redirectToHome()"> -->
 
-    <navbar-saeed></navbar-saeed>
+    <!-- <navbar-saeed></navbar-saeed> -->
     
     <div class="parentContainer">
         <br>
