--- a/Index.html
+++ b/Index.html
@@ -113,7 +113,7 @@
                                         Web Developer / Programmer based in Jeddah, Saudi Arabia working on Full
                                         Stack Web Development
                                         specialized in .NET C# Web App Development. <br>
-                                        Currently learning Unity C# Game Development on my free time.
+                                        Currently learning WPF & Unity Game Development on my free time.
                                         
                                 </div>
                         </section>
@@ -186,6 +186,9 @@
                                                 </div>
                                                 <div class="oval">
                                                         JavaScript
+                                                </div>
+                                                <div class="oval">
+                                                        TypeScript
                                                 </div>
                                         </div>
 
