Fix text alignment

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -52,13 +52,13 @@
             <br>
             <br>
 
-            <div class="">
+            <section>
                 <div class="text-left">
 
                     University of Jeddah
                     <br>
 
-                    <div class="content">Participated in a total of 12 projects, of which most was focused on process
+                    <div class="content">Participated in several projects focused on process
                         automation and
                         digital transformation.
                         <!-- <br>
@@ -90,11 +90,13 @@
                     </div>
 
                 </div>
-            </div>
+            </section>
+
             <br>
             <hr>
             <br>
-            <div class="">
+
+            <section>
                 <div class="text-left">
                     Online Game Store
                     <br>
@@ -108,11 +110,13 @@
                     </div>
 
                 </div>
-            </div>
+            </section>
+
             <br>
             <hr>
             <br>
-            <div class="">
+
+            <section>
                 <div id="Saeedo98" class="text-left">
                     Personal Website
                     <br>
@@ -122,11 +126,13 @@
 
                     </div>
                 </div>
-            </div>
+            </section>
+
             <br>
             <hr>
             <br>
-            <div class="">
+
+            <section>
                 <div class="text-left">
                     Beep Generator
                     <br>
@@ -136,7 +142,7 @@
 
                     </div>
                 </div>
-            </div>
+            </section>
 
             <br>
             <br>
